[package]
name = "publish"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.2"
async-trait = "0.1.63"
bitflags = "2.0.2"
cap-std = "3.0.0"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["rt", "sync", "fs", "io-util"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.2", features = ["fs", "process"] }
nix = { version = "0.27.1", features = ["user"] }

[target.'cfg(windows)'.dependencies]
windows = "0.53.0"

[dev-dependencies]
tempfile = "3.3.0"
tokio = { version = "1.24.2", features = ["macros"] }
