[package]
name = "pypublish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pypublish"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.2"
publish = { path = "../../" }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
async-trait = "0.1.77"
